# qchem

./: .gitignore  README.md  beh2_stretching.py  commands.sh  compare_ground_state.py  compare_vqe_casci.py  compare_vqe_casci_casscf.py  compare_vqe_methods.py  compare_vqe_methods_fast.py  compare_vqe_methods_simple.py  compare_vqe_methods_time_memory.py  compare_vqe_shot_noise.py  dmdm_spectrum.ipynb  license_fm.txt  lih_stretching.py  pyproject.toml  spectrum.ipynb  spectrum_compare.ipynb  spectrum_vqe.ipynb  vqe_methods.drawio
bsub/: beh2_stretching.sh  lih_stretching.sh  vqe_casci_compare.sh  vqe_casci_compare_h2o.sh  vqe_casci_compare_h2o_sto-3g_fullci.sh  vqe_casci_compare_h2o_sto-3g_minimal.sh  vqe_casci_compare_lih.sh  vqe_casci_compare_lih_fullci.sh  vqe_casci_compare_lih_sto-3g_fullci.sh  vqe_casci_compare_lih_sto-3g_minimal.sh  vqe_ecd.sh  vqe_ground_state.sh  vqe_performance.sh  vqe_performance2.sh  vqe_performance_beh2.sh  vqe_performance_benzene.sh  vqe_performance_benzene2.sh  vqe_performance_benzene3.sh  vqe_performance_c1.sh  vqe_performance_c12.sh  vqe_performance_c18.sh  vqe_performance_c2.sh  vqe_performance_c24.sh  vqe_performance_c3.sh  vqe_performance_c4.sh  vqe_performance_c5.sh  vqe_performance_c6.sh  vqe_performance_h2o.sh  vqe_performance_h2o_2.sh  vqe_performance_h2o_scale.sh  vqe_performance_lih.sh  vqe_shot_noise.sh
dalton_scripts/: h2o.dal  h2o.mol  lih.dal  lih.mol
examples/: dmdm_minimal_example.py  dmdm_usage.ipynb  qrunch_demo.ipynb  qrunch_minimal_example.py  spectrum copy.ipynb
experiments/: lih_scaling.ipynb  (+1 more)
(+2 files in other folders)
